--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@
 .App-link {
   color: #61dafb;
 }
+.loginform {
+    display : "flex";
+    justify-content : "center";
+    align-content : "center"}
 
 @keyframes App-logo-spin {
   from {
